[package]
name = "main"
version = "0.1.0"
authors = ["Konstantin <phpconf@gmail.com>"]


[workspace]
members = [
    "pqb_codegen",
    "pqb"
    ]




[dependencies]
#use chrono::prelude::*;
chrono = "*"
pqb = {path = "pqb"}
pqb_codegen = {path = "pqb_codegen"}
postgres = "*"
log = "0.3"


[replace]
"pqb:0.1.0" = { path = "pqb" }